# Xihe

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Benchmarks/: CMakeLists.txt  MemoryBench.cpp
CMake/: HelperFunctions.cmake  HelperMacros.cmake
Doc/: 代码审查.md
Doc/Plan/: Core 基础设施库.md  Platform 平台实现库.md  项目结构.md
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt  Main.cpp
Source/Xihe/: Application.cpp  Application.hpp  CMakeLists.txt  Xihe.hpp
Source/Xihe/Core/: Context.cpp  Context.hpp
Source/Xihe/Core/Base/: Assert.hpp  Concepts.hpp  Defines.hpp  Error.cpp  Error.hpp  Log.hpp  Portable.hpp
Source/Xihe/Core/Events/: Event.hpp
Source/Xihe/Core/IO/: FileSystem.cpp  FileSystem.hpp
Source/Xihe/Core/Math/: Math.hpp
Source/Xihe/Core/Memory/: Allocator.hpp  Memory.hpp
Source/Xihe/Core/Services/: ConfigManager.cpp  ConfigManager.hpp  LogManager.cpp  LogManager.hpp
Source/Xihe/Core/Threading/: Threads.hpp
Source/Xihe/Core/Utils/: NonCopyable.hpp
Source/Xihe/Core/Utils/Time/: Clock.hpp
Source/Xihe/Platform/: Input.hpp  Platform.hpp  Window.hpp
Source/Xihe/Renderer/: Renderer.hpp
Source/XiheEditor/: CMakeLists.txt  Main.cpp
Source/XiheLib/: Application.cpp  Application.hpp  CMakeLists.txt  Xihe.hpp
Source/XiheLib/Core/: Context.cpp  Context.hpp
Source/XiheLib/Core/Base/: Concepts.hpp  Defines.hpp  Error.cpp  Error.hpp  Log.hpp  Portable.hpp
Source/XiheLib/Core/Events/: Event.hpp  EventBus.cpp  EventBus.hpp
Source/XiheLib/Core/IO/: FileSystem.cpp  FileSystem.hpp  FileSystemIndex.cpp  FileSystemIndex.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
Source/XiheLib/Core/Math/: Common.hpp  Hash.hpp  Math.hpp  Random.hpp
Source/XiheLib/Core/Math/Common/: Approximate.hpp  Basic.hpp  Bits.hpp  Constants.hpp  Eigen.hpp  Polynomial.hpp
Source/XiheLib/Core/Math/Geometry/: Point.hpp  Ray.hpp
Source/XiheLib/Core/Math/Hash/: wyHash.hpp
Source/XiheLib/Core/Math/Rand/: PCG.hpp  Utils.hpp
Source/XiheLib/Core/Math/Random/: Internal.hpp  Random.hpp  Uniform.hpp
Source/XiheLib/Core/Math/Random/Engines/: PCG.hpp  Romu.hpp  SplitMix.hpp  Xoshiro.hpp
Source/XiheLib/Core/Math/Sampling/: PMF.hpp
Source/XiheLib/Core/Memory/: Allocators.hpp  IAllocator.hpp  Memory.hpp
Source/XiheLib/Core/Memory/Allocators/: GeneralPurposeAllocator.hpp  IRawAllocator.hpp  PlainAllocator.hpp  PoolAllocator.hpp  RingAllocator.hpp  ScopeAllocator.hpp
Source/XiheLib/Core/Platform/: Input.hpp  Platform.hpp  PlatformFactory.hpp  VulkanInterop.hpp  Window.hpp
Source/XiheLib/Core/Platform/Events/: PlatformEvents.hpp
Source/XiheLib/Core/Platform/SDL/: SDLInput.cpp  SDLPlatform.cpp  SDLVulkanInterop.cpp  SDLWindow.cpp
Source/XiheLib/Core/Services/: ConfigManager.cpp  ConfigManager.hpp  Logger.cpp  Logger.hpp
Source/XiheLib/Core/Threading/: Internal.hpp  Sleep.hpp  Threads.hpp
Source/XiheLib/Core/Utils/: Enum.hpp  Logger.cpp  Logger.hpp  NonCopyable.hpp  Ring.hpp  SourceLocation.hpp  Strings.hpp
Source/XiheLib/Core/Utils/Time/: Clock.hpp  FpsCounter.hpp  FrameTimer.hpp  Stopwatch.hpp  TimeStepper.hpp  TimerQueue.hpp
Source/XiheLib/Platform/: Input.hpp  Platform.hpp  PlatformFactory.hpp  VulkanInterop.hpp  Window.hpp
Source/XiheLib/Platform/SDL/: SDLInput.cpp  SDLPlatform.cpp  SDLVulkanInterop.cpp  SDLWindow.cpp
Source/XiheLib/Renderer/: Renderer.cpp  Renderer.hpp
Tests/: CMakeLists.txt
Tests/Core/: ConfigManagerTest.cpp  ConfigTest.cpp  EnumTest.cpp  ErrorTest.cpp  EventBusTest.cpp  EventTest.cpp  FileSystemTest.cpp  LoggerTest.cpp  MemoryTest.cpp  RingTest.cpp  StringsTest.cpp  TimeTest.cpp
Tests/Math/: CommonTest.cpp  RandomTest.cpp
Tests/Platform/: SDLPlatformTest.cpp  VulkanInteropTest.cpp
Tests/Services/: LoggerTest.cpp
